--- a/style.css
+++ b/style.css
@@ -4,7 +4,34 @@
 }
 
 body {
-  background-image: radial-gradient(rgb(174, 175, 245), rgb(0, 0, 0));
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	-webkit-animation: gradient 15s ease infinite;
+	        animation: gradient 15s ease infinite;
+}
+
+@-webkit-keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 .heading h1 {
@@ -85,17 +112,24 @@ footer {
   .sounds{
    padding-bottom: 2vh;
   }
+  .heading h1{
+    padding-bottom: 10vh;
+  }
 }
 
 @media screen and (max-width: 690px) {
   .sounds {
     padding-bottom: 5vh;
   }
+  .heading h1{
+    padding-bottom: 8vh;
+  }
 }
 
 @media screen and (max-width: 600px) {
   .heading h1 {
     font-size: 350%;
+    padding-bottom: 7vh;
   }
   footer {
     font-size: 100%;
@@ -105,14 +139,14 @@ footer {
 @media screen and (max-width: 525px) {
   .heading h1 {
     font-size: 250%;
-    padding-bottom: 10vh;
+    padding-bottom: 6vh;
   }
 }
 
 @media screen and (max-width: 420px) {
   .heading h1 {
     font-size: 220%;
-    padding-bottom: 8vh;
+    padding-bottom: 5vh;
   }
   footer {
     font-size: 90%;
